--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ figure {
   align-items: center;
   justify-content: center;
   margin: 2em auto;
-  max-width: 80%;
+  max-width: 800px;
 }
 
 figcaption {
