--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img {
 table {
   font-size: 0.85em;
   border-collapse: collapse;
-  width: 80%;
+  width: 600px;
   margin: 1.5em 0;
   padding: 20px 20px;
   align-items: center;
