--- a/style.css
+++ b/style.css
@@ -165,12 +165,21 @@ th {
   font-size: 1rem;
   color: #444;
   align-content: center;
-  justify-content: center;   /* Center the author list horizontally */
-  text-align: center;        /* Center text inside each span */
+  justify-content: center;
+  text-align: center;
+  align-items: flex-end;
 }
 .author-list span {
   white-space: nowrap;
   text-align: center;
+  display: flex;
+  align-items: flex-end;
+}
+.author-list sup {
+  align-self: flex-start; /* Move superscript to the top of the span */
+  font-size: 0.7em;
+  line-height: 1;
+  margin-left: 2px;
 }
 .correspondence {
   font-size: 0.9rem;
