--- a/style.css
+++ b/style.css
@@ -205,3 +205,28 @@ th {
 .table-wrapper table {
   width: 100%;
 }
+
+.affiliations {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  font-size: 0.98rem;
+  color: #555;
+  justify-content: center;
+  text-align: center;
+  align-items: flex-end;
+}
+.affiliations span {
+  white-space: nowrap;
+  text-align: center;
+  display: flex;
+  align-items: flex-end;
+}
+.affiliations sup {
+  align-self: flex-start;
+  font-size: 0.7em;
+  line-height: 1;
+  margin-left: 2px;
+}
